# unrecord

./: Cargo.toml  LICENSE  README.md
src/: info_panel.rs  main.rs  record.rs  wav_file.rs
src/audio/: audio_unit.rs  device.rs  driver.rs  latency.rs  mod.rs  session.rs  unit.rs  wav_file.rs
src/components/: mod.rs
src/components/grid/: mod.rs  state.rs  viewport.rs
src/components/region/: mod.rs  region.rs  view.rs
src/components/tick/: generator.rs  label_view.rs  mod.rs  view.rs
src/components/track/: header_view.rs  mod.rs  track.rs  track_view.rs
src/components/waveform/: bucket.rs  clip.rs  clip_view.rs  form.rs  form_view.rs  meta.rs  mipmap.rs  mod.rs
src/time/: duration.rs  mod.rs  sample_rate.rs  time_code.rs  time_grid.rs  time_grid_gen.rs
src/ui/: button.rs  card.rs  combo.rs  input.rs  label.rs  layout.rs  listener.rs  mod.rs  panel.rs  style.rs  waveform.rs
src/ui/grid/: header_list.rs  mod.rs  track_list.rs  view.rs
src/ui/info/: mod.rs  panel.rs  state.rs
src/ui/session/: mod.rs  panel.rs  state.rs  track.rs
src/ui/timeline/: grid.rs  mod.rs  panel.rs  scale.rs  state.rs
src/waveform/: mod.rs  time_cursor.rs  waveform_mipmap.rs  waveform_shape.rs
