[package]
name = "unrecord"
version = "0.1.0"
edition = "2024"

[dependencies]
hound = "3.5"
anyhow = "1.0"
env_logger = "0.11.8"
log = "0.4.29"
eframe = "0.33.3"
egui = "0.33.3"

coreaudio-rs = "0.14.0"
coreaudio-sys = "0.2.17"

objc2-core-audio = "0.3.2"
objc2-core-audio-types = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-audio-toolbox = "0.3.2"
rfd = "0.17.2"

[dependencies.interflow]
git = "https://github.com/SolarLiner/interflow.git"
branch = "main"
