[package]
name = "unrecord"
version = "0.1.0"
edition = "2024"

[dependencies]
hound = "3.5"
anyhow = "1.0"
env_logger = "0.11.8"
log = "0.4.29"

gpui = { version = "0.2.2" }
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"

core-text = "=21.0.0"
async-std = "1.13.2"

coreaudio-rs = "0.14.0"
coreaudio-sys = "0.2.17"

objc2-core-audio = "0.3.2"
objc2-core-audio-types = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-audio-toolbox = "0.3.2"

[profile.dev]
opt-level = 1